--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>insane-text-generator</title>
+  <title>Insane Text Generator</title>
 </head>
 
 <body>
